--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <section>
         <h2>About Me</h2>
         <p>
-          If you are looking for an un-selfish, teamplayer, go getter individuel you have found your person! I love figuring out how things work equally as much as I love getting code to work the first time. When i'm not behind a screen typing i'm either behind another screen gaming or catching some rays outside with my dog.
-        
+          If you are looking for an un-selfish, teamplayer, go getter individuel you have found your person! <br> I love figuring out how things work equally as much as I love getting code to work the first time. When i'm not behind a screen typing i'm either behind another screen gaming or catching some rays outside with my dog.
+          <br> I've accumulated 4 years of testing experience before being layed off from my previous job. <br> After taking time to process what had just happened I dusted myself off and started my journey to becoming a front-end developer.
         </p>
     </section>
     
